fix item styles overlap

--- a/src/styles/components/cart-item.scss
+++ b/src/styles/components/cart-item.scss
@@ -15,8 +15,8 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  padding: 10px 20px;
-
+  //padding: 10px 10px;
+  margin: 10px;
   .item-name {
     font-size: 16px;
   }
